<resources>
    <string name="app_name">Buy3C</string>

    <!-- 首頁 -->
    <string name="home_title">首頁</string>

    <!-- 熱銷榜 -->
    <string name="hot_sale_title">熱銷榜</string>
    <string name="hot_sale_tab_0">主機</string>
    <string name="hot_sale_tab_1">螢幕</string>
    <string name="hot_sale_tab_4">喇叭</string>
    <string name="hot_sale_tab_3">筆電</string>

    <!-- 熱門活動 -->
    <string name="hot_camping_title">熱門活動</string>

    <!-- 會員中心 -->
    <string name="member_title">會員中心</string>
    <string name="member_edit_acc">帳號(限數字英文@.)</string>
    <string name="member_edit_psw">密碼(限數字英文@.)</string>
    <string name="member_edit_psw_confirm">確認密碼</string>
    <string name="member_edit_name">姓名</string>
    <string name="member_check_box">記住我</string>
    <string name="member_login">登入</string>
    <string name="member_register">新會員註冊</string>
    <string name="member_welcome">歡迎回來</string>
    <string name="member_logout">登出</string>
    <string name="member_also_like">你可能會喜歡</string>

    <!-- 購物車 -->
    <string name="shopping_car_title">購物車</string>
    <string name="shopping_car_empty_text">現在是空的~趕快去購買</string>
    <string name="shopping_car_checkout">去結帳</string>

    <!-- 活動頁 -->
    <string name="camping_title">活動頁</string>

    <!-- 商品頁 -->
    <string name="prod_title">商品頁</string>
    <string name="prod_add_shopping_car">加入購物車</string>

    <!-- 註冊頁 -->
    <string name="register_title">新會員註冊</string>

</resources>