<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_reg_acc"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@."
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/bg_stroke_corner"
        android:hint="@string/member_edit_acc"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="50dp"/>

    <EditText
        android:inputType="textPassword"
        android:layout_below="@+id/et_reg_acc"
        android:id="@+id/et_reg_psw"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@."
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/bg_stroke_corner"
        android:hint="@string/member_edit_psw"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="50dp"/>

    <EditText
        android:inputType="textPassword"
        android:layout_below="@+id/et_reg_psw"
        android:id="@+id/et_reg_psw_confirm"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@."
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/bg_stroke_corner"
        android:hint="@string/member_edit_psw_confirm"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="50dp"/>

    <EditText
        android:layout_below="@+id/et_reg_psw_confirm"
        android:id="@+id/et_reg_name"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/bg_stroke_corner"
        android:hint="@string/member_edit_name"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/bt_register"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/color_white"
        android:text="@string/member_register"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>